--- a/vector_matrix.Rmd
+++ b/vector_matrix.Rmd
@@ -1,22 +1,28 @@
 ## Vector addition
 
-- Define a vector, then “add 2” to it:
-```{r}
-u <- c(2, 3, 6, 5, 7)
-k <- 2
-u + k
-```
 
 Adds 2 to each element.
 
 - Adding vectors:
 ```{r}
-u
-v <- c(1, 8, 3, 4, 2)
-u + v
+u <- c(2, 3, 6, 5, 7)
+v <- c(1, 8, 3, 2, 0)
+u + v # xxx
 ```
 
-Elementwise addition. (Linear algebra: vector addition.)
+- Elementwise addition. (Linear algebra: vector addition.)
+
+## Adding a number to a vector
+
+- Define a vector, then “add 2” to it:
+
+```{r}
+u
+k <- 2
+u + k
+```
+
+- adds 2 to *each* element of `u`.
 
 ## Scalar multiplication
 As per linear algebra:
@@ -54,13 +60,14 @@ u + w
 
 - Add 1 to first element of `u`, add 2 to second.
 - Go back to beginning of `w` to find something to add: add 1 to 3rd
-element of `u`, 2 to 4th element.
+element of `u`, 2 to 4th element, 1 to 5th. xxx
 
 ## How R does this xxx
 
 - Keep re-using shorter vector until reach length of longer one.
 - “recycling”.
-- Same idea is used when multiply a vector by a number: the number
+- if the longer vector's length not a multiple of the shorter vector's length, get a warning (probably not what you want). 
+- Same idea is used when multiplying a vector by a number: the number
 keeps getting recycled.
 
 ## Matrices
@@ -121,7 +128,7 @@ M <- read_delim(my_url, " ", col_names = F)
 class(M)
 ```
 
-## but... xxx
+## but...
 
 - except that M is not an R matrix, and thus this doesn’t work:
 ```{r, error=T}
@@ -129,7 +136,8 @@ v <- c(1, 3)
 M %*% v
 ```
 
-## Making a real matrix
+## Making a genuine matrix
+
 Do this first:
 ```{r}
 M <- as.matrix(M)
@@ -161,14 +169,15 @@ solve(A)
 correct.
 
 ## Inner product
-- Vectors in R are column vectors, so just do the matrix multiplication:
+- Vectors in R are column vectors, so just do the matrix multiplication (`t()` is transpose): xxx
+
 ```{r}
 a <- c(1, 2, 3)
 b <- c(4, 5, 6)
 t(a) %*% b
 ```
 
-- xxx Note that the answer is actually a 1 × 1 matrix.
+- Note that the answer is actually a 1 × 1 matrix.
 - Or as the sum of the elementwise multiplication:
 
 ```{r}
