--- a/preliminaries.Rmd
+++ b/preliminaries.Rmd
@@ -21,5 +21,10 @@ library(conflicted)
 conflict_prefer("select", "dplyr")
 conflict_prefer("filter", "dplyr")
 conflict_prefer("extract", "rstan")
+conflict_prefer("intersect", "dplyr")
+conflict_prefer("lag", "dplyr")
+conflict_prefer("Position", "ggplot2")
+conflict_prefer("setdiff", "dplyr")
+conflict_prefer("union", "dplyr")
 ```
 
