more progress on bootstrap and even stan

--- a/preliminaries.Rmd
+++ b/preliminaries.Rmd
@@ -18,6 +18,7 @@ library(lubridate)
 library(ggrepel)
 library(rstan)
 library(conflicted)
+library(bootstrap)
 conflict_prefer("select", "dplyr")
 conflict_prefer("filter", "dplyr")
 conflict_prefer("extract", "rstan")
