--- a/bootstrap.Rmd
+++ b/bootstrap.Rmd
@@ -1,16 +1,17 @@
-## Notes xxx
+## Sources and Notes 
 
 [ref](https://www.researchgate.net/publication/265399426_Bootstrap_Methods_and_Permutation_Tests)
 
 xxx PASIAS: add some problems, eg. based on actually normal data, the mean for some skewed data
 an unfamiliar stat (eg. correlation)
 
-xxx also I have the Sioson edits to PASIAS to consider
+
 
 ## Packages for this section
 
 ```{r, eval=F}
 library(tidyverse)
+library(bootstrap)
 ```
 
 
@@ -24,7 +25,7 @@ irs = read_csv(my_url)
 ```
 
 
-```{r, fig.height=3}
+```{r, fig.height=3.2}
 ggplot(irs, aes(x=Time))+geom_histogram(bins=10)
 ```
 
@@ -38,7 +39,7 @@ ggplot(irs, aes(x=Time))+geom_histogram(bins=10)
   - This is why we had to consider the sample size as well as the shape.
 - But how do we know whether this is the case or not? We only have *one* sample.
 
-## The bootstrap
+## The (nonparametric) bootstrap
 
 - Typically, our sample will be reasonably representative of the population.
 - Idea: pretend the sample *is* the population, and sample from it *with replacement*.
@@ -58,7 +59,7 @@ ggplot(irs, aes(x=Time))+geom_histogram(bins=10)
 
 ## Bootstrapping the IRS data
 
-- Sampling with replacement is done like this:
+- Sampling with replacement is done like this (the default sample size is as long as the original data):
 
 ```{r}
 boot=sample(irs$Time, replace=T)
@@ -68,42 +69,205 @@ mean(boot)
 - That's one bootstrapped mean. We need a whole bunch.
 - Use the same idea as for simulating power:
 
-```{r}
+```{r, echo=F}
+set.seed(457299)
+```
+
+
+```{r, cache=T}
 rerun(1000, sample(irs$Time, replace=T)) %>% 
   map_dbl(~mean(.)) -> means
 ```
 
 ## Sampling distribution of sample mean
 
-```{r}
+```{r, fig.height=4}
 ggplot(tibble(means), aes(x=means))+geom_histogram(bins=20)
 ```
 
 ## Comments
 
-This is not so bad: a little bit skewed, maybe:
+This is not so bad: a long right tail, maybe:
 
 ```{r, fig.height=3.5}
 ggplot(tibble(means), aes(sample=means))+
   stat_qq()+stat_qq_line()
 ```
 
-## Getting a bootstrap CI for the mean, and compare with $t$:
+## Confidence interval from the bootstrap distribution
 
-- a bootstrap CI is the 2.5 and 97.5 percentiles of the bootstrapped sampling distribution
-- another, "bootstrap $t$", uses the SD of the bootstrapped sampling distribution as the SE part
-- the third one here is the ordinary $t$ interval on the original data.
+There are two ways (at least):
+
+- percentile bootstrap interval: take the 2.5 and 97.5 percentiles (to get the middle 95%). This is easy, but not always the best:
 
 ```{r}
-quantile(means, c(0.025, 0.975))
-mean(means)+c(-1,1)*qt(0.975, length(irs$Time)-1)*sd(means)
-t.test(irs$Time)$conf.int
+(b_p=quantile(means, c(0.025, 0.975)))
+```
+
+- bootstrap $t$: use the SD of the bootstrapped sampling distribution as the SE of the estimator of the mean and make a $t$ interval:
+
+```{r}
+n=length(irs$Time)
+t_star=qt(0.975, n-1)
+(b_t=mean(means)+c(-1, 1)*t_star*sd(means))
+```
+
+## Comparing
+
+- get ordinary $t$ interval:
+
+```{r}
+my_names=c("LCL", "UCL")
+o_t=t.test(irs$Time)$conf.int
+```
+
+
+- Compare the 2 bootstrap intervals with the ordinary $t$-interval: 
+
+```{r}
+tibble(limit=my_names, o_t, b_t, b_p)
+```
+
+- The bootstrap $t$ and the ordinary $t$ are very close
+- The percentile bootstrap interval is noticeably shorter (common) and higher (skewness).
+  
+## Which to prefer?
+
+- If the intervals agree, then they are all good.
+- If they disagree, they are all bad! 
+- In that case, use BCA interval (over).
+
+  
+## Bias correction and acceleration
+
+- this from 
+"An introduction to the bootstrap", by
+Brad Efron and Robert J. Tibshirani.
+- there is way of correcting the CI for skewness in the bootstrap distribution, called the BCA method
+- complicated, but implemented in `bootstrap` package.
+
+## Run this on the IRS data:
+
+```{r}
+bca=bcanon(irs$Time, 1000, mean)
+bca$confpoints
+```
+
+## use 2.5% and 97.5% points for CI
+
+```{r}
+bca$confpoints %>% as_tibble() %>% 
+  filter(alpha %in% c(0.025, 0.975)) %>% 
+  pull(`bca point`) -> b_bca
+b_bca
+```
+
+## Comparing
+
+```{r}
+tibble(limit=my_names, o_t, b_t, b_p, b_bca)
+```
+
+- The BCA interval says that the mean should be estimated even higher than the bootstrap percentile interval does. 
+- The BCA interval is the one to trust.
+
+
+## Bootstrapping the correlation
+
+Recall the soap data:
+
+```{r}
+url="http://www.utsc.utoronto.ca/~butler/c32/soap.txt"
+soap=read_delim(url," ")
+```
+
+## The data xxx
+
+```{r, fig.height=3.75}
+ggplot(soap, aes(x=speed, y=scrap, colour=line))+
+  geom_point()+geom_smooth(method="lm", se=F)
 ```
 
 ## Comments
 
-- The bootstrap $t$ and the ordinary $t$ intervals are very close.
-- The percentile bootstrap interval is a bit shorter (this usually happens)
-- If the bootstrap $t$ and ordinary $t$ agree (as here), they can both be trusted.
-- If they don't, then trust neither! (What to do? See later.)
+- Line B produces less scrap for any given speed.
+- For line B, estimate the correlation between speed and scrap (with a confidence interval.)
 
+## Extract the line B data; standard correlation test 
+
+```{r}
+soap %>% filter(line=="b") -> line_b
+with(line_b, cor.test(speed, scrap))
+```
+
+```{r, include=FALSE}
+o_c=with(line_b, cor.test(speed, scrap))$conf.int
+```
+
+
+## Bootstrapping a correlation
+
+- Sample from data with replacement, but have to keep the `speed`-`scrap` *pairs* together
+- Sample *rows* at random, then take the variable values that belong to those rows:
+
+```{r}
+rerun(1000, sample(1:nrow(line_b), replace=T)) %>%
+  map(~slice(line_b, .)) %>% 
+  map_dbl(~with(.,cor(speed, scrap))) -> cors
+```
+
+## A picture of this 
+
+```{r, fig.height=4}
+ggplot(tibble(cors), aes(x=cors))+geom_histogram(bins=15)
+```
+
+## Comments and next steps
+
+- This is very left-skewed.
+- Bootstrap percentile interval is:
+
+```{r}
+(b_p=quantile(cors, c(0.025, 0.975)))
+```
+
+- We probably need the BCA interval instead.
+
+## Getting the BCA interval 1/2
+
+- To use `bcanon`, write a function that takes a vector of row numbers and returns the correlation between `speed` and `scrap` for those rows:
+
+```{r}
+theta=function(rows, d) {
+  d %>% slice(rows) %>% with(., cor(speed, scrap))
+}
+theta(1:3, line_b)
+line_b %>% slice(1:3)
+```
+
+- That looks about right.
+
+## Getting the BCA interval 2/2
+
+- Inputs to `bcanon` are now:
+  - row numbers (1 through 12 in our case: 12 rows in `line_b`)
+  - number of bootstrap samples
+  - the function we just wrote
+  - the data frame:
+
+```{r}
+points=bcanon(1:12, 1000, theta, line_b)$confpoints
+points %>% as_tibble() %>% 
+  filter(alpha %in% c(0.025, 0.975)) %>% 
+  pull(`bca point`) -> b_bca
+b_bca
+```
+
+## Comparing the results
+
+```{r}
+tibble(limit=my_names, o_c, b_p, b_bca)
+```
+
+- The bootstrap percentile interval doesn't go down far enough. 
+- The BCA interval seems to do a better job than the ordinary `cor.test` interval in capturing the skewness of the distribution.
