--- a/rstan.Rmd
+++ b/rstan.Rmd
@@ -246,8 +246,240 @@ Our actual data values were these:
 x
 ```
 
-None of these are very unlikely according to our posterior predictive distribution, so our model is believable. 
+- None of these are very unlikely according to our posterior predictive distribution, so our model is believable. 
+- Or make a plot: a bar chart with the data on it as well (over):
 
-## A linear regression, or look at the "eight schools", or an ANOVA
+```{r}
+ggplot(d, aes(x=x_sim))+geom_bar()+
+  geom_dotplot(data=tibble(x), aes(x=x), binwidth=1)+
+   scale_y_continuous(NULL, breaks = NULL) -> g
+```
 
-xxxx
+- This also shows that the distribution of the data conforms well enough to the posterior predictive distribution (over).
+
+## The plot
+
+```{r}
+g
+```
+
+
+## Analysis of variance, the Bayesian way
+
+Recall the jumping rats data:
+
+```{r, message=F}
+my_url="http://www.utsc.utoronto.ca/~butler/c32/jumping.txt"
+rats0=read_delim(my_url," ")
+rats0 %>% sample_n(6) # random sample of rows
+```
+
+## Our aims here
+
+- Estimate the mean bone density of all rats under each of the experimental conditions
+- Model: given the group means, each observation normally distributed with common variance $\sigma^2$
+- Three parameters to estimate, plus the common variance.
+- Obtain posterior distributions for the group means.
+- Ask whether the posterior distributions of these means are sufficiently different.
+
+## Numbering the groups
+
+- Stan doesn't handle categorical variables (everything is `real` or `int`).
+- Turn the groups into group *numbers* first.
+- Take opportunity to put groups in logical order:
+
+```{r}
+rats0 %>% mutate(group_fct=fct_inorder(group),
+              group_no=as.integer(group_fct)) -> rats
+rats %>% sample_n(8)
+```
+
+## Plotting the data 1/2
+
+Most obviously, boxplots:
+
+```{r}
+ggplot(rats, aes(x=group_fct, y=density))+geom_boxplot()
+```
+
+## Plotting the data 2/2
+
+Another way: density plot (smoothed out histogram); can distinguish groups by colours:
+
+```{r}
+ggplot(rats, aes(x=density, colour=group_fct))+geom_density()
+```
+
+
+## The procedure
+
+- For each observation, find out which (numeric) group it belongs to, 
+- then model it as having a normal distribution with that group's mean and the common variance.
+- Stan does `for` loops.
+
+## The model part
+
+Suppose we have `n_obs` observations:
+
+```
+model {
+  // likelihood
+  for (i in 1:n_obs) {
+    g=group_no[i];
+    density[i] ~ normal(mu[g], sigma);
+  }
+}
+```
+
+## The variables here
+
+- `n_obs` is data.
+- `g` is a temporary integer variable only used here
+- `i` is only used in the loop (integer) and does not need to be declared
+- `density` is data, a real vector of length `n_obs`
+- `mu` is a parameter, a real vector of length 3 (3 groups)
+- `sigma` is a real parameter
+
+`mu` and `sigma` need prior distributions:
+  - for `mu`, each component independently normal with mean 600 and SD 50 (my guess at how big and variable they will be)
+  - for `sigma`, chi-squared with 50 df (my guess at typical amount of variability from obs to obs)
+
+## Complete the `model` section:
+
+```
+model {
+  int g;
+  // priors
+  mu ~ normal(600, 50);
+  sigma ~ chi_square(50);
+  // likelihood
+  for (i in 1:n_obs) {
+    g=group_no[i];
+    density[i] ~ normal(mu[g], sigma);
+  }
+}
+```
+
+## Parameters
+
+The three elements of `mu`, and also `sigma`:
+
+```
+parameters {
+  real mu[3];
+  real<lower=0> sigma;
+}
+```
+
+- `sigma` has to be positive. Declare it so here, so that the sampling runs smoothly.
+
+## Data
+
+Everything else:
+
+```
+data {
+  int n_obs;
+  int n_group;
+  real density[n_obs];
+  int<lower=1, upper=n_group> group_no[n_obs];
+}
+```
+
+## Compile
+
+Arrange these in order data, parameters, model in file `anova.stan`, then:
+
+```{r, eval=F}
+anova_compiled=stan_model("anova.stan")
+```
+
+```{r, echo=FALSE}
+anova_compiled=readRDS("anova_compiled.rds")
+```
+
+## Set up data and sample
+
+Supply values for *everything* declared in `data`:
+
+```{r}
+anova_data=list(n_obs=30, n_group=3, density=rats$density, group_no=rats$group_no)
+anova_samples=sampling(anova_compiled, data=anova_data)
+```
+
+## Check that the sampling worked properly
+
+```{r}
+traceplot(anova_samples)
+```
+
+## Comments
+
+- The sampled values for each of the parameters should move freely across their posterior distributions (and not get stuck anywhere). This appears to have happened.
+
+## Look at the results
+
+```{r}
+anova_samples
+```
+
+## Comments
+
+- The posterior 95% intervals for control (group 1) and highjump (group 3) do not quite overlap, suggesting that these exercise groups really are different.
+
+## Plotting the posterior distributions for the `mu`
+
+- Extract the sampled `mu` values (matrix):
+
+```{r}
+anova_ext=extract(anova_samples)
+head(anova_ext$mu)
+```
+
+## Turn into a data frame, arrange for plotting, name groups
+
+```{r}
+cbind(anova_ext$mu, sigma=anova_ext$sigma) %>% 
+  as_tibble() %>% 
+  gather(group, density, V1:V3) %>% 
+  mutate(group=fct_recode(group, Control="V1", Lowjump="V2", Highjump="V3")) -> sims
+sims %>% sample_n(6)
+```
+
+## Density plots of posterior mean distributions
+
+```{r}
+ggplot(sims, aes(x=density, colour=group))+ geom_density()
+```
+
+## Posterior predictive distributions
+
+Randomly sample from posterior means and SDs in `sims`. There are 12000 rows in `sims`:
+
+```{r}
+sims %>%  mutate(sim_data=rnorm(12000, density, sigma)) -> ppd
+ppd %>% sample_n(8)
+```
+
+## Compare posterior predicted distribution with actual data
+
+- Idea: make plots of posterior predictive distribution, and plot actual data as points on them
+- Use facets, one for each treatment group:
+
+```{r}
+my_binwidth=15
+ggplot(ppd, aes(x=sim_data)) + geom_histogram(binwidth=my_binwidth) +
+  geom_dotplot(data=rats, aes(x=density), binwidth=my_binwidth) + 
+  facet_wrap(~group) +
+  scale_y_continuous(NULL, breaks = NULL) -> g 
+```
+
+- See (over) that the data values are mainly in the middle of the predictive distributions.
+
+## The plot
+
+```{r}
+g
+```
+
+
