--- a/preliminaries.Rmd
+++ b/preliminaries.Rmd
@@ -18,8 +18,9 @@ library(leaps)
 library(lubridate)
 library(ggrepel)
 library(rstan)
-library(conflicted)
+library(loo)
 library(bootstrap)
+library(conflicted)
 conflict_prefer("select", "dplyr")
 conflict_prefer("filter", "dplyr")
 conflict_prefer("extract", "rstan")
@@ -28,5 +29,7 @@ conflict_prefer("lag", "dplyr")
 conflict_prefer("Position", "ggplot2")
 conflict_prefer("setdiff", "dplyr")
 conflict_prefer("union", "dplyr")
+conflict_prefer("bootstrap", "bootstrap")
+conflict_prefer("loo", "loo")
 ```
 
