--- a/slides_c32.tex
+++ b/slides_c32.tex
@@ -5200,8 +5200,8 @@ call this good:
 
 \end{frame}
 
-\begin{frame}[fragile]{Chi-squared data, \emph{df} = 10 xxx}
-\protect\hypertarget{chi-squared-data-df-10-xxx}{}
+\begin{frame}[fragile]{Chi-squared data, \emph{df} = 10}
+\protect\hypertarget{chi-squared-data-df-10}{}
 
 Somewhat skewed to right:
 
@@ -5239,8 +5239,8 @@ Somewhat opening-up curve:
 
 \end{frame}
 
-\begin{frame}[fragile]{Chi-squared data, df = 3 xxx}
-\protect\hypertarget{chi-squared-data-df-3-xxx}{}
+\begin{frame}[fragile]{Chi-squared data, df = 3}
+\protect\hypertarget{chi-squared-data-df-3}{}
 
 Definitely skewed to right:
 
@@ -5259,8 +5259,8 @@ Definitely skewed to right:
 
 \end{frame}
 
-\begin{frame}[fragile]{The normal quantile plot xxx}
-\protect\hypertarget{the-normal-quantile-plot-xxx}{}
+\begin{frame}[fragile]{The normal quantile plot}
+\protect\hypertarget{the-normal-quantile-plot-4}{}
 
 Clear upward-opening curve:
 
@@ -5299,7 +5299,7 @@ Long tails (or a very sharp peak):
 \end{frame}
 
 \begin{frame}[fragile]{The normal quantile plot}
-\protect\hypertarget{the-normal-quantile-plot-4}{}
+\protect\hypertarget{the-normal-quantile-plot-5}{}
 
 Low values too low and high values too high for normal.
 
@@ -6259,8 +6259,8 @@ group SDs.
 
 \end{frame}
 
-\begin{frame}[fragile]{Normal quantile plots by group xxx}
-\protect\hypertarget{normal-quantile-plots-by-group-xxx}{}
+\begin{frame}[fragile]{Normal quantile plots by group}
+\protect\hypertarget{normal-quantile-plots-by-group}{}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6305,8 +6305,8 @@ group SDs.
 
 \end{frame}
 
-\begin{frame}[fragile]{Mood's median test 1/4 xxx}
-\protect\hypertarget{moods-median-test-14-xxx}{}
+\begin{frame}[fragile]{Mood's median test 1/4}
+\protect\hypertarget{moods-median-test-14}{}
 
 \begin{itemize}
 \tightlist
